ant4c (YYYY.MM)
  * Increased stack that used at BLAKE3 algorithm to allow calculate hashes
    of inputs with huge (more than 32 KB) length.

 -- TheVice <TheVice>  DAY, DD MM YYYY HH:MM:SS +/-..

ant4c (2020.09)
  * Functions from the path unit allowed to operate with empty paths.
    Function 'combine' can be used for normalizing path.
  * Increased list of symbols to trim from string at 'string::trim'
    function.
  * Replaced script hash functions with hash length at the names with
    'blake2b', 'blake3', 'keccak' and 'sha3'.
  * Added support of 'blake3' and 'keccak' algorithms at the script
    function 'file::get-checksum'.
  * Added argument for configure algorithm - byte order, hash length,
    to the 'file::get-checksum' function.
  * Added possibility use external events listener.
  * Added 'loadtasks' task.
  * For POSIX systems added searching of files with '.build' extension,
    if no file provided at command prompt.
  * Added 'path::glob' function.
  * Allowed to call executable from the directory that was set
    at the PATH environment variable.

 -- TheVice <TheVice>  Mon, 14 Sep 2020 17:11:16 +0300

ant4c (2020.05)

  * Attempt to set value for read only property will not fail
    evaluation of script.
  * Fixed enumeration of target dependencies if space or/and tabs
    was used between names.
  * Fixed enumeration of strings with non ASCII chars at 'for_each' task.
  * WIN32: fixed print of non ASCII chars at the terminal.

 -- TheVice <TheVice>  Sun, 24 May 2020 05:29:35 +0300

ant4c (2020.04)

  * Added support of UTF8 encoding at the string unit.
  * Added new tasks 'attrib', 'call', 'choose', 'copy',
    'delete', 'description', 'fail', 'foreach', 'if',
    'loadfile', 'mkdir', 'move', 'program', 'property',
    'sleep', 'touch' and 'trycatch' to early exists 'echo' and 'exec'.
  * Added hash unit with 'crc32', 'BLAKE2b', 'BLAKE3',
    'SHA3/Keccak' algorithms. Algorithms 'crc32' and 'BLAKE2b'