@@ -13,8 +13,9 @@ All binaries available on the [release page](https://github.com/TheVice/Ant4C/re
 ### Installing
 Depend on variant available for your system:
 * Unpack *zip* archive to prefer location.
-* For *DEB*, *TGZ* or *TXZ* packages - install program using the system package manager.
+* For packages - install program using the system package manager.
   * Debian based: *dpkg --install \*.deb*.
+  * RPM based: *rpm -Uvh \*.rmp*.
   * FreeBSD: *pkg install \*.txz*.
   * OpenBSD: *pkg_add -Dunsigned \*.tgz*.
 
