@@ -25,8 +25,9 @@
 . Go to the https://github.com/TheVice/Ant4C/releases[release page] of the project and choose version for your operation system.
 . Depend on variant available for your system:
 * Unpack 'zip' archive to prefer location.
-* For 'DEB', 'TGZ' or 'TXZ' packages - install program using the system package manager.
+* For packages - install program using the system package manager.
 ** Debian based: 'dpkg --install *.deb'.
+** RPM based: 'rpm -Uvh *.rmp'.
 ** FreeBSD: 'pkg install *.txz'.
 ** OpenBSD: 'pkg_add -Dunsigned *.tgz'.
 
